# USD-Bill-Classification

./: .gitignore  .python-version  README.md  pyproject.toml  test_project.py
docs/: model_performance.md
notebooks/: eda.ipynb  model_training_report.ipynb
src/data/: prepare_data.py
src/model/: train_model.py
src/ui/: app.py
