[project]
name = "USD-Bill-Classification"
version = "0.1.0"
description = "An AI project to classify US dollar bills from images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "jupyter>=1.0.0",
    "opencv-python",
    "tensorflow",
    "keras",
    "pillow",
    "gradio"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]